# indy7

./: .gitignore
src/indy7_description/: CMakeLists.txt  package.xml
src/indy7_description/launch/: gripper_display.launch.py  indy_display.launch.py
src/indy7_description/urdf/: custom_gripper.xacro  gripper_only.urdf.xacro  indy.ros2_control.xacro  indy.urdf.xacro  indy7_with_gripper.urdf.xacro  indy7_with_real_gripper_collision.urdf.xacro  indy_macro.xacro  real_gripper_collision.xacro  visual_gripper.xacro
src/indy7_driver/: CMakeLists.txt  package.xml
src/indy7_driver/indy7_driver/: indy_driver.py  indy_status_node.py  servo_joy_input.py  servo_keyboard_input.py
src/indy7_driver/launch/: indy_bringup.launch.py
src/indy7_gazebo/: CMakeLists.txt  package.xml
src/indy7_gazebo/controller/: gripper_controllers.yaml  indy7_controllers.yaml
src/indy7_gazebo/launch/: gripper_gazebo.launch.py  indy_gazebo.launch.py
src/indy7_gazebo/worlds/: pick_place.world
src/indy7_gripper/: CMakeLists.txt  package.xml
src/indy7_gripper/config/: gripper_real.yaml  (+1 more)
src/indy7_interfaces/: CMakeLists.txt  package.xml
src/indy7_moveit/: CMakeLists.txt  package.xml
src/indy7_task/: package.xml  setup.cfg  setup.py
src/indy7_task/config/: pass_place_goal.json  task_poses.yaml  task_segments.yaml
src/indy7_task/indy7_task/: dcp3_monitor.py  gripper_client.py  moveit_client.py  moveit_preview_client.py  planning_scene_client.py  pose_loader.py  task_node.py  task_node_preview.py  task_node_servo.py  task_repeat_node.py
src/indy7_task/launch/: task_only.launch.py
(+15 files in other folders)
